starlark: remove EvalException(Location) -- easy cases
    This change removes the Location argument to new EvalException() if:
    - location is null or BUILTIN;
    - location is rule.getLocation(), if the code is only reached while
      doing rule analysis, as analysis failures always report the rule
      location.
    - the exception is never thrown out of a Starlark call; that is,
      it is only used locally in Java code.

    Trickier cases are left for a follow-up.

    Also, use Starlark.errorf to construct error messages.

    PiperOrigin-RevId: 325546962